--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog</h1>
-    <p>Y este el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Titulo interesante y atractivo del post</h1>
+        </div>
+        <p>Y este el parrafo de texto, donde empezaremos a hacer cosas increibles</p>
+    </div>
 </body>
 </html>
