Agregado el contenido adicional del Blog y una mejor

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
             <h1>Titulo interesante y atractivo del post</h1>
         </div>
         <p>Y este el parrafo de texto, donde empezaremos a hacer cosas increibles</p>
+        <p>El conocimiento es poder, el conocimiento se comparte</p>
     </div>
 </body>
 </html>
