--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            HyperBlog <span id="tagLine">Tu blog personal</span>
+            HyperBlog <span id="tagLine">Tu blog cabecera</span>
         </div>
         <div id="post">
             <h1>Titulo interesante y atractivo del post</h1>
