--- a/blogpost.html
+++ b/blogpost.html
@@ -6,13 +6,14 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            HyperBlog <span id="tagLine">Tu blog personal</span>
+            HyperBlog <span id="tagLine">Tu blog personal maestro</span>
         </div>
         <div id="post">
             <h1>Titulo interesante y atractivo del post</h1>
         </div>
         <p>Y este el parrafo de texto, donde empezaremos a hacer cosas increibles</p>
         <p>El conocimiento es poder, el conocimiento se comparte</p>
+        <p>Estudie porfavor</p>
     </div>
 </body>
 </html>
