--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,10 @@
     <div id="container">
         <div id="cabecera">
             <img src="imagenes/dragon.png" id="logo" alt="">
-            HyperBlog <span id="tagLine">Tu blog cabecera</span>
+            HyperBlog 3.0<span id="tagLine">Tu blog cabecera</span>
         </div>
         <div id="post">
-            <h1>Titulo interesante y atractivo del post</h1>
+            <h1>Titulo didactico y atractivo del post</h1>
             <p>Y este el parrafo de texto, donde empezaremos a hacer cosas increibles</p>
             <p>El conocimiento es poder, el conocimiento se comparte</p>
             <p>Estudie porfavor</p>
