Agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
         <div id="post">
             <h1>Titulo didactico y atractivo del post</h1>
             <p>Y este el parrafo de texto, donde empezaremos a hacer cosas increibles</p>
+            <p><img src="imagenes/equipo.png" width="100%"></p>
             <p>El conocimiento es poder, el conocimiento se comparte</p>
             <p>Estudie porfavor</p>
         </div>
