I speak english now!

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <div id="container">
         <div id="cabecera">
             <img src="imagenes/dragon.png" id="logo" alt="">
-            HyperBlog 3.0<span id="tagLine">Tu blog cabecera</span>
+            HyperBlog 3.0<span id="tagLine">Your first options in blog</span>
         </div>
         <div id="post">
             <h1>Titulo didactico y atractivo del post</h1>
